<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/logo_nome"
        android:layout_width="205dp"
        android:layout_height="45dp"
        android:layout_marginBottom="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252" />

    <ImageView
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:layout_marginStart="92dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <TextView
        android:id="@+id/wisefinance"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/wisefinance"
        android:textAppearance="@style/Wise"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="52dp" />

    <TextView
        android:id="@+id/o_jeito"
        android:layout_width="350dp"
        android:layout_height="77dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:lineSpacingExtra="7sp"
        android:text="@string/ojeito"
        android:textAppearance="@style/TextPurple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        tools:layout_editor_absoluteY="145dp" />

    <ImageView
        android:id="@+id/img_onboarding"
        android:layout_width="415dp"
        android:layout_height="415dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-20dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/layer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/text2"
        android:textSize="15sp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/sinta"
        android:textAppearance="@style/TextD"
        android:textColor="@color/cin"
        style="@style/InterSemiBold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_onboarding"
        />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/text2"
        android:text="@string/comecar"
        />

</androidx.constraintlayout.widget.ConstraintLayout>